--- a/articles.html
+++ b/articles.html
@@ -5,5 +5,5 @@ permalink: /articles/
 ---
 
 <head>
-    <meta http-equiv="refresh" content="url=/">
+    <meta http-equiv="refresh" content="0;url={{ site.baseurl }}/">
 </head>
